--- a/raport_complet.html
+++ b/raport_complet.html
@@ -3,129 +3,104 @@
 <html lang="ro">
 <head>
 <meta charset="UTF-8">
-<title>Raport Complet Loguri</title>
+<title>Raport Log-uri</title>
 <style>
-:root{
-  --bg:#0b1321;
-  --card:#0f1a2f;
-  --muted:#9aa6b2;
-  --line:#1f2b45;
-  --info:#3498db;
-  --warn:#f1c40f;
-  --err:#e67e22;
-  --fatal:#e74c3c;
+body {
+    font-family: Arial, sans-serif;
+    background: #f4f4f4;
+    margin: 0;
+    padding: 20px;
 }
-*{
-  box-sizing:border-box;
+
+h1, h2, h3 {
+    color: #333;
 }
-body{
-  margin:0;
-  font-family:Arial, Helvetica, sans-serif;
-  background:var(--bg);
-  color:#e9eef5;
+
+.container {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #aaa;
+    margin-bottom: 30px;
 }
-.wrapper{
-  max-width:1200px;
-  margin:0 auto;
-  padding:20px;
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
 }
-.card{
-  background:var(--card);
-  padding:20px;
-  margin-bottom:20px;
-  border-radius:10px;
-  border:1px solid var(--line);
+
+th {
+    background: #333;
+    color: white;
+    padding: 8px;
+    text-align: left;
 }
-h1,h2{
-  margin:0 0 10px 0;
+
+td {
+    padding: 8px;
+    border-bottom: 1px solid #ccc;
 }
-.table{
-  width:100%;
-  border-collapse:collapse;
-  font-size:14px;
+
+tr:nth-child(even) {
+    background: #f2f2f2;
 }
-.table th,.table td{
-  border-bottom:1px solid var(--line);
-  padding:8px;
-}
-.bar{
-  height:10px;
-  background:#14213a;
-  border-radius:6px;
-  overflow:hidden;
-}
-.bar span{
-  display:block;
-  height:100%;
-}
-.note{
-  color:var(--muted);
-  font-size:13px;
+
+.alert {
+    color: red;
+    font-weight: bold;
 }
 </style>
 </head>
-
 <body>
-<div class="wrapper">
 
-<h1>Raport complet analiza loguri</h1>
-<p>Fisier: <b>test_logs/apache_300.log</b></p>
-<p>Generat la: 2025-12-07 14:46:23</p>
-<p>Total linii procesate: 300</p>
+<h1> Raport Analiză Log-uri </h1>
 
-<div class="card">
-<h2>Distributie pe niveluri</h2>
-<p>INFO: 98</p><p>WARN: 108</p><p>ERROR: 94</p>
-<div class="bar"><span style="width:32.666666666666664%; background:var(--info);"></span><span style="width:36.0%; background:var(--warn);"></span><span style="width:31.333333333333336%; background:var(--err);"></span></div>
+<div class="container">
+<h2>Informații generale</h2>
+<p><b>Fișier analizat:</b> test_logs/apache_300.log</p>
+<p><b>Total linii:</b> 331</p>
 </div>
 
-<div class="card">
+<div class="container">
+<h2>Distribuție Niveluri Log</h2>
+<table>
+<tr><th>Nivel</th><th>Număr</th><th>Procent</th></tr>
+<tr><td>INFO</td><td>98</td><td>29.61%</td></tr><tr><td>WARN</td><td>129</td><td>38.97%</td></tr><tr><td>ERROR</td><td>104</td><td>31.42%</td></tr>
+</table>
+</div>
+
+<div class="container">
 <h2>Top IP-uri</h2>
-<table class="table">
-<thead><tr><th>#</th><th>IP</th><th>Cereri</th></tr></thead>
-<tbody>
-<tr><td>1</td><td>192.168.0.10</td><td>21</td></tr><tr><td>2</td><td>192.168.0.8</td><td>21</td></tr><tr><td>3</td><td>192.168.0.16</td><td>19</td></tr><tr><td>4</td><td>192.168.0.3</td><td>19</td></tr><tr><td>5</td><td>192.168.0.19</td><td>19</td></tr><tr><td>6</td><td>192.168.0.17</td><td>18</td></tr><tr><td>7</td><td>192.168.0.6</td><td>17</td></tr><tr><td>8</td><td>192.168.0.0</td><td>17</td></tr><tr><td>9</td><td>192.168.0.11</td><td>17</td></tr><tr><td>10</td><td>192.168.0.2</td><td>16</td></tr>
-</tbody>
+<table>
+<tr><th>IP</th><th>Număr cereri</th></tr>
+<tr><td>192.168.0.10</td><td>21</td></tr><tr><td>192.168.0.8</td><td>21</td></tr><tr><td>192.168.0.16</td><td>19</td></tr><tr><td>192.168.0.3</td><td>19</td></tr><tr><td>192.168.0.19</td><td>19</td></tr><tr><td>192.168.0.17</td><td>18</td></tr><tr><td>192.168.0.6</td><td>17</td></tr><tr><td>192.168.0.0</td><td>17</td></tr><tr><td>192.168.0.11</td><td>17</td></tr><tr><td>192.168.0.2</td><td>16</td></tr>
 </table>
 </div>
 
-<div class="card">
+<div class="container">
+<h2>Profilare IP-uri</h2>
+<table>
+<tr><th>IP</th><th>Total</th><th>Erori</th><th>404</th><th>Rute accesate</th></tr>
+<tr><td>192.168.0.6</td><td>17</td><td>2</td><td>2</td><td>/api/users, /search?q=test, /products, /checkout, /logout, /dashboard, /product/123, /login, /register, /profile, /admin</td></tr><tr><td>192.168.0.16</td><td>19</td><td>7</td><td>0</td><td>/profile, /cart, /login, /register, /search?q=test, /products, /admin, /product/123, /checkout, /logout</td></tr><tr><td>192.168.0.3</td><td>19</td><td>6</td><td>1</td><td>/dashboard, /cart, /register, /logout, /login, /product/123, /profile, /search?q=test, /checkout</td></tr><tr><td>192.168.0.19</td><td>19</td><td>4</td><td>1</td><td>/dashboard, /api/users, /admin, /logout, /search?q=test, /product/123, /profile, /login, /api/search, /checkout, /register</td></tr><tr><td>192.168.0.13</td><td>15</td><td>8</td><td>1</td><td>/cart, /products, /login, /product/123, /search?q=test, /api/users, /api/search, /checkout</td></tr><tr><td>192.168.0.14</td><td>10</td><td>2</td><td>1</td><td>/api/search, /products, /search?q=test, /profile, /api/users, /admin</td></tr><tr><td>192.168.0.0</td><td>17</td><td>7</td><td>0</td><td>/api/users, /logout, /products, /product/123, /checkout, /register, /dashboard, /profile, /search?q=test</td></tr><tr><td>192.168.0.10</td><td>21</td><td>5</td><td>0</td><td>/api/search, /logout, /search?q=test, /api/users, /profile, /register, /product/123, /admin, /login, /dashboard</td></tr><tr><td>192.168.0.8</td><td>21</td><td>4</td><td>1</td><td>/search?q=test, /product/123, /api/users, /register, /admin, /products, /profile, /api/search, /cart, /login</td></tr><tr><td>192.168.0.4</td><td>14</td><td>2</td><td>3</td><td>/checkout, /api/users, /products, /login, /dashboard, /api/search, /profile, /product/123</td></tr><tr><td>192.168.0.11</td><td>17</td><td>6</td><td>3</td><td>/products, /dashboard, /product/123, /register, /api/users, /search?q=test, /profile, /login, /admin</td></tr><tr><td>192.168.0.2</td><td>16</td><td>5</td><td>0</td><td>/products, /checkout, /api/users, /product/123, /cart, /search?q=test, /profile, /logout, /admin, /api/search, /login</td></tr><tr><td>192.168.0.9</td><td>15</td><td>4</td><td>1</td><td>/profile, /checkout, /cart, /register, /login, /admin, /search?q=test, /logout, /api/users, /dashboard</td></tr><tr><td>192.168.0.1</td><td>6</td><td>1</td><td>1</td><td>/login, /api/users, /api/search, /profile, /register, /logout</td></tr><tr><td>192.168.0.18</td><td>16</td><td>5</td><td>2</td><td>/register, /products, /product/123, /checkout, /api/search, /admin, /api/users, /profile, /cart</td></tr><tr><td>192.168.0.5</td><td>9</td><td>4</td><td>0</td><td>/login, /dashboard, /logout, /api/users, /product/123, /api/search, /admin</td></tr><tr><td>192.168.0.7</td><td>15</td><td>6</td><td>1</td><td>/logout, /api/users, /cart, /login, /dashboard, /product/123, /admin, /search?q=test, /register</td></tr><tr><td>192.168.0.17</td><td>18</td><td>9</td><td>1</td><td>/admin, /login, /search?q=test, /dashboard, /logout, /product/123, /api/search, /checkout, /api/users, /profile, /register</td></tr><tr><td>192.168.0.12</td><td>7</td><td>2</td><td>0</td><td>/api/users, /dashboard, /register, /login, /admin</td></tr><tr><td>192.168.0.15</td><td>9</td><td>5</td><td>0</td><td>/checkout, /search?q=test, /admin, /dashboard, /login, /cart</td></tr><tr><td>203.0.113.50</td><td>10</td><td>0</td><td>10</td><td>/robots.txt, /ads.txt, /config.php, /phpmyadmin, /server-status, /backup.zip, /shadow, /secret, /login.php, /admin</td></tr><tr><td>192.168.0.50</td><td>6</td><td>0</td><td>0</td><td>/login</td></tr><tr><td>198.51.100.23</td><td>5</td><td>0</td><td>0</td><td>/admin, /admin/login, /config, /backup, /phpmyadmin</td></tr><tr><td>192.168.0.200</td><td>10</td><td>10</td><td>0</td><td>/api/data</td></tr>
+</table>
+</div>
+
+<div class="container">
 <h2>Spike-uri detectate</h2>
-<table class="table">
-<thead><tr><th>Tip</th><th>Interval</th><th>Count</th><th>Mesaj</th></tr></thead>
-<tbody>
-<tr><td colspan='4'>Nu exista spike-uri.</td></tr>
-</tbody>
+<table>
+<tr><th>Tip</th><th>Interval</th><th>Count</th><th>Mesaj</th></tr>
+<tr><td>Error Spike</td><td>N/A</td><td>10</td><td>IP 192.168.0.200 are 10 erori → posibil atac sau server instabil.</td></tr><tr><td>404 Spike</td><td>N/A</td><td>10</td><td>IP 203.0.113.50 a generat 10 erori 404 → posibil scanner (brute-scan).</td></tr><tr><td>Sensitive Path Spike</td><td>N/A</td><td>5</td><td>IP 198.51.100.23 a accesat 5 rute sensibile → posibil atac targetat.</td></tr>
 </table>
 </div>
 
-<div class="card">
-<h2>Activitate suspecta</h2>
-<table class="table">
-<thead><tr><th>Tip</th><th>Interval</th><th>Count</th><th>Mesaj</th></tr></thead>
-<tbody>
-<tr><td colspan='4'>Nu exista activitate suspecta.</td></tr>
-</tbody>
+<div class="container">
+<h2>Activitate suspectă</h2>
+<table>
+<tr><th>Tip</th><th>IP</th><th>Count</th><th>Interval</th><th>Mesaj</th></tr>
+<tr><td>Sensitive path access</td><td>203.0.113.50</td><td>5</td><td>17:12:02 - 17:12:09</td><td>IP 203.0.113.50 acceseaza PATH-URI CRITICE (5 accesari) — posibil atacator.</td></tr><tr><td>Sensitive path access</td><td>198.51.100.23</td><td>5</td><td>09:15:00 - 09:15:04</td><td>IP 198.51.100.23 acceseaza PATH-URI CRITICE (5 accesari) — posibil atacator.</td></tr>
 </table>
 </div>
 
-<div class="card">
-<h2>Profilare IP</h2>
-<table class="table">
-<thead><tr><th>IP</th><th>Total</th><th>Status codes</th><th>Paths</th></tr></thead>
-<tbody>
-<tr><td>192.168.0.6</td><td>17</td><td>302:6, 200:3, 404:2, 503:2, 403:3, 301:1</td><td>/api/users, /search?q=test, /products...</td></tr><tr><td>192.168.0.16</td><td>19</td><td>401:2, 200:4, 502:4, 400:3, 503:2, 302:1, 301:1, 403:1, 500:1</td><td>/profile, /cart, /login...</td></tr><tr><td>192.168.0.3</td><td>19</td><td>500:3, 301:4, 401:5, 502:2, 404:1, 403:1, 302:1, 400:1, 503:1</td><td>/dashboard, /cart, /register...</td></tr><tr><td>192.168.0.19</td><td>19</td><td>503:3, 401:2, 200:4, 404:1, 302:4, 301:3, 502:1, 400:1</td><td>/dashboard, /api/users, /admin...</td></tr><tr><td>192.168.0.13</td><td>15</td><td>503:5, 500:3, 403:1, 301:3, 400:2, 404:1</td><td>/cart, /products, /login...</td></tr><tr><td>192.168.0.14</td><td>10</td><td>500:1, 302:1, 404:1, 301:1, 200:3, 403:1, 401:1, 503:1</td><td>/api/search, /products, /search?q=test...</td></tr><tr><td>192.168.0.0</td><td>17</td><td>503:4, 500:2, 400:1, 502:1, 403:2, 401:3, 200:1, 302:2, 301:1</td><td>/api/users, /logout, /products...</td></tr><tr><td>192.168.0.10</td><td>21</td><td>403:4, 500:1, 401:5, 400:1, 502:1, 301:2, 302:2, 503:3, 200:2</td><td>/api/search, /logout, /search?q=test...</td></tr><tr><td>192.168.0.8</td><td>21</td><td>301:3, 403:3, 401:4, 200:2, 302:3, 404:1, 502:2, 503:2, 400:1</td><td>/search?q=test, /product/123, /api/users...</td></tr><tr><td>192.168.0.4</td><td>14</td><td>404:3, 502:2, 301:1, 403:1, 400:3, 302:2, 401:1, 200:1</td><td>/checkout, /api/users, /products...</td></tr><tr><td>192.168.0.11</td><td>17</td><td>301:2, 302:2, 404:3, 500:3, 503:3, 400:3, 200:1</td><td>/products, /dashboard, /product/123...</td></tr><tr><td>192.168.0.2</td><td>16</td><td>500:1, 301:1, 400:1, 503:4, 401:4, 302:3, 403:2</td><td>/products, /checkout, /api/users...</td></tr><tr><td>192.168.0.9</td><td>15</td><td>503:2, 301:3, 502:1, 400:3, 302:1, 404:1, 403:1, 500:1, 401:1, 200:1</td><td>/profile, /checkout, /cart...</td></tr><tr><td>192.168.0.1</td><td>6</td><td>302:1, 301:1, 502:1, 401:1, 404:1, 403:1</td><td>/login, /api/users, /api/search...</td></tr><tr><td>192.168.0.18</td><td>16</td><td>404:2, 400:1, 301:2, 502:2, 500:3, 401:1, 200:2, 302:3</td><td>/register, /products, /product/123...</td></tr><tr><td>192.168.0.5</td><td>9</td><td>403:2, 401:1, 503:2, 502:2, 301:1, 200:1</td><td>/login, /dashboard, /logout...</td></tr><tr><td>192.168.0.7</td><td>15</td><td>302:2, 502:2, 404:1, 503:1, 500:3, 400:4, 200:2</td><td>/logout, /api/users, /cart...</td></tr><tr><td>192.168.0.17</td><td>18</td><td>503:3, 302:1, 500:4, 404:1, 502:2, 400:2, 301:1, 403:2, 401:2</td><td>/admin, /login, /search?q=test...</td></tr><tr><td>192.168.0.12</td><td>7</td><td>403:2, 502:1, 301:1, 200:1, 302:1, 503:1</td><td>/api/users, /dashboard, /register...</td></tr><tr><td>192.168.0.15</td><td>9</td><td>503:4, 403:1, 301:1, 302:1, 400:1, 502:1</td><td>/checkout, /search?q=test, /admin...</td></tr>
-</tbody>
-</table>
-</div>
-
-<div class="card">
-<h2>Recomandari finale</h2>
-<ul>
-<li>Investigati erorile frecvente.</li>
-</ul>
-</div>
-
-</div>
 </body>
 </html>
