corectare Top IP-uri periculoase

--- a/raport_complet.html
+++ b/raport_complet.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Raport log — test_logs/nginx.log</title>
+  <title>Raport log — test_logs/json_300.log</title>
   <style>
 
     :root{
@@ -122,10 +122,10 @@
     <section class="hero">
       <div class="title">
         <span class="pill">Security • Report</span>
-        <h1>Raport log pentru <span class="gold">test_logs/nginx.log</span></h1>
+        <h1>Raport log pentru <span class="gold">test_logs/json_300.log</span></h1>
       </div>
       <div class="meta">
-        <div>Total linii: <b>54</b></div>
+        <div>Total linii: <b>300</b></div>
         <div>Generat la: <b><script>document.write(new Date().toLocaleString())</script></b></div>
       </div>
     </section>
@@ -143,7 +143,7 @@
                 <th data-sort="num">Count</th>
                 <th data-sort="num">Procent</th>
               </tr></thead>
-              <tbody><tr><td>WARN</td><td>32</td><td>59.26%</td></tr><tr><td>INFO</td><td>13</td><td>24.07%</td></tr><tr><td>ERROR</td><td>9</td><td>16.67%</td></tr></tbody>
+              <tbody><tr><td>INFO</td><td>90</td><td>30.00%</td></tr><tr><td>WARN</td><td>103</td><td>34.33%</td></tr><tr><td>ERROR</td><td>107</td><td>35.67%</td></tr></tbody>
             </table>
           </div>
         </div>
@@ -160,7 +160,7 @@
                 <th data-sort="num">CererI</th>
                 <th data-sort="num">Procent</th>
               </tr></thead>
-              <tbody><tr><td>192.168.0.10</td><td>12</td><td>22.22%</td></tr><tr><td>192.168.0.77</td><td>6</td><td>11.11%</td></tr><tr><td>192.168.0.3</td><td>5</td><td>9.26%</td></tr><tr><td>192.168.0.50</td><td>5</td><td>9.26%</td></tr><tr><td>192.168.0.200</td><td>5</td><td>9.26%</td></tr><tr><td>192.168.0.150</td><td>5</td><td>9.26%</td></tr><tr><td>192.168.0.66</td><td>4</td><td>7.41%</td></tr><tr><td>192.168.0.78</td><td>3</td><td>5.56%</td></tr><tr><td>192.168.0.100</td><td>3</td><td>5.56%</td></tr><tr><td>192.168.0.2</td><td>2</td><td>3.70%</td></tr></tbody>
+              <tbody><tr><td>192.168.0.2</td><td>23</td><td>7.67%</td></tr><tr><td>192.168.0.1</td><td>20</td><td>6.67%</td></tr><tr><td>192.168.0.7</td><td>20</td><td>6.67%</td></tr><tr><td>192.168.0.11</td><td>19</td><td>6.33%</td></tr><tr><td>192.168.0.18</td><td>18</td><td>6.00%</td></tr><tr><td>192.168.0.19</td><td>18</td><td>6.00%</td></tr><tr><td>192.168.0.5</td><td>17</td><td>5.67%</td></tr><tr><td>192.168.0.6</td><td>15</td><td>5.00%</td></tr><tr><td>192.168.0.3</td><td>15</td><td>5.00%</td></tr><tr><td>192.168.0.8</td><td>15</td><td>5.00%</td></tr></tbody>
             </table>
           </div>
         </div>
@@ -179,7 +179,7 @@
                 <th data-sort="text">Ultima</th>
                 <th data-sort="num">Scor risc</th>
               </tr></thead>
-              <tbody><tr><td colspan='5'>Niciun IP periculos</td></tr></tbody>
+              <tbody><tr class='danger-row'><td class='ip-danger'>192.168.0.1</td><td>20</td><td>ERR:16 • ADMIN:0 • FAIL:0</td><td>-</td><td>16</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.7</td><td>20</td><td>ERR:16 • ADMIN:0 • FAIL:0</td><td>-</td><td>16</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.2</td><td>23</td><td>ERR:15 • ADMIN:0 • FAIL:0</td><td>-</td><td>15</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.3</td><td>15</td><td>ERR:13 • ADMIN:0 • FAIL:0</td><td>-</td><td>13</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.11</td><td>19</td><td>ERR:12 • ADMIN:0 • FAIL:0</td><td>-</td><td>12</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.6</td><td>15</td><td>ERR:11 • ADMIN:0 • FAIL:0</td><td>-</td><td>11</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.9</td><td>12</td><td>ERR:11 • ADMIN:0 • FAIL:0</td><td>-</td><td>11</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.18</td><td>18</td><td>ERR:11 • ADMIN:0 • FAIL:0</td><td>-</td><td>11</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.5</td><td>17</td><td>ERR:11 • ADMIN:0 • FAIL:0</td><td>-</td><td>11</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.12</td><td>14</td><td>ERR:11 • ADMIN:0 • FAIL:0</td><td>-</td><td>11</td></tr></tbody>
             </table>
           </div>
         </div>
@@ -210,7 +210,7 @@
       <section class="card col-12">
         <div class="head"><h2>Profiluri IP (hours • method • path • status)</h2></div>
         <div class="body">
-          <h3 style='margin-top:20px'>192.168.0.2</h3><p>Total: <b>2</b> • ERROR: <b>1</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /api/users, /logout</p><h3 style='margin-top:20px'>192.168.0.6</h3><p>Total: <b>1</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /checkout</p><h3 style='margin-top:20px'>192.168.0.0</h3><p>Total: <b>1</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /checkout</p><h3 style='margin-top:20px'>192.168.0.13</h3><p>Total: <b>1</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /cart</p><h3 style='margin-top:20px'>192.168.0.10</h3><p>Total: <b>12</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /logout, /login</p><h3 style='margin-top:20px'>192.168.0.3</h3><p>Total: <b>5</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /profile, /products, /cart, /checkout</p><h3 style='margin-top:20px'>192.168.0.19</h3><p>Total: <b>1</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /product/123</p><h3 style='margin-top:20px'>192.168.0.50</h3><p>Total: <b>5</b> • ERROR: <b>0</b> • 404: <b>5</b></p><p style='color:#d9dde6'>Rute: /robots.txt, /ads.txt, /config.php, /phpmyadmin, /backup.zip</p><h3 style='margin-top:20px'>192.168.0.78</h3><p>Total: <b>3</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /admin, /admin/login, /admin/secret</p><h3 style='margin-top:20px'>192.168.0.100</h3><p>Total: <b>3</b> • ERROR: <b>3</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /api/data</p><h3 style='margin-top:20px'>192.168.0.77</h3><p>Total: <b>6</b> • ERROR: <b>0</b> • 404: <b>6</b></p><p style='color:#d9dde6'>Rute: /robots.txt, /ads.txt, /config.php, /phpmyadmin, /backup.zip, /hidden</p><h3 style='margin-top:20px'>192.168.0.66</h3><p>Total: <b>4</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /admin, /admin/login, /admin/secret, /login/reset</p><h3 style='margin-top:20px'>192.168.0.200</h3><p>Total: <b>5</b> • ERROR: <b>5</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /api/data</p><h3 style='margin-top:20px'>192.168.0.150</h3><p>Total: <b>5</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /shop</p>
+          <h3 style='margin-top:20px'>192.168.0.0</h3><p>Total: <b>12</b> • ERROR: <b>3</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /product/123, /admin, /search?q=test, /dashboard, /register, /logout, /login, /api/users</p><h3 style='margin-top:20px'>192.168.0.2</h3><p>Total: <b>23</b> • ERROR: <b>8</b> • 404: <b>6</b></p><p style='color:#d9dde6'>Rute: /search?q=test, /profile, /admin, /products, /api/search, /checkout, /dashboard, /cart, /product/123, /logout, /api/users</p><h3 style='margin-top:20px'>192.168.0.6</h3><p>Total: <b>15</b> • ERROR: <b>7</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /checkout, /admin, /api/search, /products, /cart, /logout, /register, /dashboard, /profile</p><h3 style='margin-top:20px'>192.168.0.13</h3><p>Total: <b>12</b> • ERROR: <b>5</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /product/123, /cart, /profile, /logout, /admin, /register, /dashboard, /api/search</p><h3 style='margin-top:20px'>192.168.0.16</h3><p>Total: <b>12</b> • ERROR: <b>3</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /products, /dashboard, /login, /checkout, /api/users, /cart, /product/123, /logout</p><h3 style='margin-top:20px'>192.168.0.9</h3><p>Total: <b>12</b> • ERROR: <b>6</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /register, /api/search, /api/users, /login, /dashboard, /admin, /checkout</p><h3 style='margin-top:20px'>192.168.0.3</h3><p>Total: <b>15</b> • ERROR: <b>6</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /dashboard, /cart, /api/search, /search?q=test, /profile, /logout, /register, /admin, /login, /checkout</p><h3 style='margin-top:20px'>192.168.0.8</h3><p>Total: <b>15</b> • ERROR: <b>6</b> • 404: <b>2</b></p><p style='color:#d9dde6'>Rute: /product/123, /search?q=test, /api/search, /dashboard, /profile, /api/users, /register, /checkout, /cart</p><h3 style='margin-top:20px'>192.168.0.11</h3><p>Total: <b>19</b> • ERROR: <b>7</b> • 404: <b>4</b></p><p style='color:#d9dde6'>Rute: /register, /api/users, /logout, /checkout, /search?q=test, /profile, /dashboard, /cart, /api/search</p><h3 style='margin-top:20px'>192.168.0.4</h3><p>Total: <b>8</b> • ERROR: <b>4</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /search?q=test, /profile, /api/users, /product/123, /dashboard, /api/search, /register</p><h3 style='margin-top:20px'>192.168.0.18</h3><p>Total: <b>18</b> • ERROR: <b>6</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /api/search, /products, /logout, /dashboard, /admin, /api/users, /profile, /login, /product/123, /cart</p><h3 style='margin-top:20px'>192.168.0.10</h3><p>Total: <b>11</b> • ERROR: <b>4</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /checkout, /register, /cart, /api/users, /search?q=test, /api/search, /dashboard, /logout</p><h3 style='margin-top:20px'>192.168.0.17</h3><p>Total: <b>14</b> • ERROR: <b>0</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /search?q=test, /dashboard, /product/123, /login, /api/search, /cart, /profile, /logout, /admin, /api/users</p><h3 style='margin-top:20px'>192.168.0.14</h3><p>Total: <b>15</b> • ERROR: <b>7</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /api/search, /admin, /search?q=test, /login, /api/users, /register, /products, /logout</p><h3 style='margin-top:20px'>192.168.0.5</h3><p>Total: <b>17</b> • ERROR: <b>6</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /product/123, /api/users, /cart, /search?q=test, /products, /register, /api/search, /profile, /logout, /checkout</p><h3 style='margin-top:20px'>192.168.0.1</h3><p>Total: <b>20</b> • ERROR: <b>9</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /profile, /api/users, /register, /products, /search?q=test, /login, /cart, /api/search, /admin, /product/123, /checkout</p><h3 style='margin-top:20px'>192.168.0.7</h3><p>Total: <b>20</b> • ERROR: <b>7</b> • 404: <b>4</b></p><p style='color:#d9dde6'>Rute: /cart, /logout, /product/123, /checkout, /profile, /api/users, /search?q=test, /products, /admin, /api/search, /dashboard</p><h3 style='margin-top:20px'>192.168.0.12</h3><p>Total: <b>14</b> • ERROR: <b>4</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /profile, /login, /search?q=test, /logout, /checkout, /cart, /register, /api/search, /admin</p><h3 style='margin-top:20px'>192.168.0.15</h3><p>Total: <b>10</b> • ERROR: <b>5</b> • 404: <b>2</b></p><p style='color:#d9dde6'>Rute: /admin, /cart, /logout, /api/search, /profile, /product/123, /dashboard, /api/users, /checkout</p><h3 style='margin-top:20px'>192.168.0.19</h3><p>Total: <b>18</b> • ERROR: <b>4</b> • 404: <b>1</b></p><p style='color:#d9dde6'>Rute: /dashboard, /search?q=test, /profile, /cart, /api/users, /logout, /register, /product/123, /products, /admin, /login</p>
         </div>
       </section>
 
@@ -252,6 +252,6 @@
     </div> <!-- end grid -->
 
     <div class="footer">
-      <span class="gold">©</span> Raport generat automat • Stil Premium Dark-Gold
+      <span class="gold">©</span> Raport generat automat • Bota Maria Larisa
     </div>
 </div>
