verificare fisiere nginx.log pentru toate functiile

--- a/raport.html
+++ b/raport.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Raport log — test/nginx_error.log</title>
+  <title>Raport log — test/syslog_300.log</title>
   <style>
 
     :root{
@@ -122,10 +122,10 @@
     <section class="hero">
       <div class="title">
         <span class="pill">Security • Report</span>
-        <h1>Raport log pentru <span class="gold">test/nginx_error.log</span></h1>
+        <h1>Raport log pentru <span class="gold">test/syslog_300.log</span></h1>
       </div>
       <div class="meta">
-        <div>Total linii: <b>5</b></div>
+        <div>Total linii: <b>300</b></div>
         <div>Generat la: <b><script>document.write(new Date().toLocaleString())</script></b></div>
       </div>
     </section>
@@ -143,7 +143,7 @@
                 <th data-sort="num">Count</th>
                 <th data-sort="num">Procent</th>
               </tr></thead>
-              <tbody><tr><td>ERROR</td><td>5</td><td>100.00%</td></tr></tbody>
+              <tbody></tbody>
             </table>
           </div>
         </div>
@@ -160,7 +160,7 @@
                 <th data-sort="num">CererI</th>
                 <th data-sort="num">Procent</th>
               </tr></thead>
-              <tbody><tr><td>192.168.1.10</td><td>1</td><td>20.00%</td></tr><tr><td>192.168.1.20</td><td>1</td><td>20.00%</td></tr><tr><td>192.168.1.30</td><td>1</td><td>20.00%</td></tr><tr><td>192.168.1.40</td><td>1</td><td>20.00%</td></tr><tr><td>192.168.1.50</td><td>1</td><td>20.00%</td></tr></tbody>
+              <tbody><tr><td>192.168.0.6</td><td>20</td><td>6.67%</td></tr><tr><td>192.168.0.11</td><td>20</td><td>6.67%</td></tr><tr><td>192.168.0.8</td><td>19</td><td>6.33%</td></tr><tr><td>192.168.0.9</td><td>18</td><td>6.00%</td></tr><tr><td>192.168.0.2</td><td>17</td><td>5.67%</td></tr><tr><td>192.168.0.16</td><td>17</td><td>5.67%</td></tr><tr><td>192.168.0.13</td><td>16</td><td>5.33%</td></tr><tr><td>192.168.0.17</td><td>16</td><td>5.33%</td></tr><tr><td>192.168.0.12</td><td>16</td><td>5.33%</td></tr><tr><td>192.168.0.10</td><td>15</td><td>5.00%</td></tr></tbody>
             </table>
           </div>
         </div>
@@ -179,7 +179,7 @@
                 <th data-sort="text">Ultima</th>
                 <th data-sort="num">Scor risc</th>
               </tr></thead>
-              <tbody><tr class='danger-row'><td class='ip-danger'>192.168.1.20</td><td>1</td><td>ERR:1 • ADMIN:1 • FAIL:0</td><td>2025-01-15 12:00:05</td><td>3</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.1.10</td><td>1</td><td>ERR:1 • ADMIN:0 • FAIL:0</td><td>2025-01-15 12:00:01</td><td>1</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.1.30</td><td>1</td><td>ERR:1 • ADMIN:0 • FAIL:0</td><td>2025-01-15 12:00:10</td><td>1</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.1.40</td><td>1</td><td>ERR:1 • ADMIN:0 • FAIL:0</td><td>2025-01-15 12:00:15</td><td>1</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.1.50</td><td>1</td><td>ERR:1 • ADMIN:0 • FAIL:0</td><td>2025-01-15 12:00:20</td><td>1</td></tr></tbody>
+              <tbody><tr class='danger-row'><td class='ip-danger'>192.168.0.6</td><td>20</td><td>ERR:0 • ADMIN:0 • FAIL:0</td><td>1900-01-15 23:12:56</td><td>0</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.2</td><td>17</td><td>ERR:0 • ADMIN:0 • FAIL:0</td><td>1900-01-15 19:16:41</td><td>0</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.8</td><td>19</td><td>ERR:0 • ADMIN:0 • FAIL:0</td><td>1900-01-15 22:16:50</td><td>0</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.5</td><td>14</td><td>ERR:0 • ADMIN:0 • FAIL:0</td><td>1900-01-15 23:51:21</td><td>0</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.14</td><td>13</td><td>ERR:0 • ADMIN:0 • FAIL:0</td><td>1900-01-15 23:15:35</td><td>0</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.3</td><td>10</td><td>ERR:0 • ADMIN:0 • FAIL:0</td><td>1900-01-15 22:27:46</td><td>0</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.13</td><td>16</td><td>ERR:0 • ADMIN:0 • FAIL:0</td><td>1900-01-15 22:12:47</td><td>0</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.4</td><td>11</td><td>ERR:0 • ADMIN:0 • FAIL:0</td><td>1900-01-15 20:02:58</td><td>0</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.19</td><td>11</td><td>ERR:0 • ADMIN:0 • FAIL:0</td><td>1900-01-15 23:25:58</td><td>0</td></tr><tr class='danger-row'><td class='ip-danger'>192.168.0.10</td><td>15</td><td>ERR:0 • ADMIN:0 • FAIL:0</td><td>1900-01-15 22:04:31</td><td>0</td></tr></tbody>
             </table>
           </div>
         </div>
@@ -210,7 +210,7 @@
       <section class="card col-12">
         <div class="head"><h2>Profiluri IP (hours • method • path • status)</h2></div>
         <div class="body">
-          <h3 style='margin-top:20px'>192.168.1.10</h3><p>Total: <b>1</b> • ERROR: <b>1</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /login</p><h3 style='margin-top:20px'>192.168.1.20</h3><p>Total: <b>1</b> • ERROR: <b>1</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /admin</p><h3 style='margin-top:20px'>192.168.1.30</h3><p>Total: <b>1</b> • ERROR: <b>1</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /dashboard</p><h3 style='margin-top:20px'>192.168.1.40</h3><p>Total: <b>1</b> • ERROR: <b>1</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /index.php</p><h3 style='margin-top:20px'>192.168.1.50</h3><p>Total: <b>1</b> • ERROR: <b>1</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: /api/users</p>
+          <h3 style='margin-top:20px'>192.168.0.6</h3><p>Total: <b>20</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.2</h3><p>Total: <b>17</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.8</h3><p>Total: <b>19</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.5</h3><p>Total: <b>14</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.14</h3><p>Total: <b>13</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.3</h3><p>Total: <b>10</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.13</h3><p>Total: <b>16</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.4</h3><p>Total: <b>11</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.19</h3><p>Total: <b>11</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.10</h3><p>Total: <b>15</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.15</h3><p>Total: <b>13</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.11</h3><p>Total: <b>20</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.0</h3><p>Total: <b>12</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.17</h3><p>Total: <b>16</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.16</h3><p>Total: <b>17</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.12</h3><p>Total: <b>16</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.7</h3><p>Total: <b>13</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.9</h3><p>Total: <b>18</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.1</h3><p>Total: <b>14</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p><h3 style='margin-top:20px'>192.168.0.18</h3><p>Total: <b>15</b> • ERROR: <b>0</b> • 404: <b>0</b></p><p style='color:#d9dde6'>Rute: -</p>
         </div>
       </section>
 
@@ -227,7 +227,7 @@
                 <th data-sort="text">Tip spike</th>
               </tr></thead>
              <tbody>
-               <tr><td>2025-01-15 12:00:01 → 2025-01-15 12:00:10</td><td>Temporal Error Spike</td><td>3</td><td>3 erori într-o fereastră de 10s</td></tr><tr><td>2025-01-15 12:00:05 → 2025-01-15 12:00:15</td><td>Temporal Error Spike</td><td>3</td><td>3 erori într-o fereastră de 10s</td></tr><tr><td>2025-01-15 12:00:10 → 2025-01-15 12:00:20</td><td>Temporal Error Spike</td><td>3</td><td>3 erori într-o fereastră de 10s</td></tr>
+               <tr><td colspan='4'>Niciun spike detectat</td></tr>
                  </tbody>
 
             </table>
